--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.3.1"
+      "runtime": "vercel-php-runtime@0.1.0"
     }
   },
   "routes": [
